<resources>
    <string name="app_name">Taxception</string>
    <string name="versionCode">v 1.0.2</string>
    <string name="sendOtp">Send OTP</string>
    <string name="otpVerification">OTP Verification</string>
    <string name="sendingOneTimePassword">We will send you an One Time Password on this mobile number</string>
    <string name="mobileNoHint">Enter Mobile Number</string>
    <string name="emailId">Enter Your Email ID</string>
    <string name="name">Enter Your Name</string>
    <string name="enterTheOtpSend">Enter The OTP send to</string>
    <string name="didNotReceiveOtp">Did not receive OTP? </string>
    <string name="resendOtp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="invalid_mobile">Please Enter a Valid Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="number">0123456789</string>
    <string name="ifscCode">ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"</string>
    <string name="ownerDetails">Owner Details</string>
    <string name="nameOwner">SURAJIT CHATTERJEE</string>
    <string name="ownerEmailId">digital.taxceptionjgm@gmail.com</string>
    <string name="ownerPhoneNumber">9933750238 / 7001331978</string>
    <string name="notify1">IT Return Submission with in 7 days after receiving documents</string>
    <string name="notify2">We need your Personal details and Form-16</string>
    <string name="notify3">. Rs. 300.00 and Rs. 500.00 for ITR-1 and ITR-2 respectively</string>
    <string name="details">Rs. ₹</string>
    <string name="details2">and</string>
    <string name="details3">for ITR-1 and ITR-2 respectively</string>
    <string name="itr1required">ITR-1 Required* Document</string>
    <string name="itr2required">ITR-2 Required* Document</string>
    <string name="required1">*Form:- 16</string>
    <string name="required2">*Property Detail</string>
    <string name="required3">*Interest on Property or Rent Paid</string>
    <string name="required4">*Income from o/s</string>
    <string name="required5">*Bank Details</string>
    <string name="required6">*Price:- ₹</string>
    <string name="required7">*Interest on H.B.L</string>
    <string name="required8">*One or More Property Details</string>
    <string name="required9">*Dividend</string>
    <string name="required10">*Tax Deduction</string>
    <string name="itr1requiredButton">For ITR-1 Please Click This</string>
    <string name="itr2requiredButton">For ITR-2 Please Click This</string>
    <string-array name="selectCategory">
        <item>Self</item>
        <item>Relative(DD)</item>
    </string-array>
    <string name="personalDetails">Tax Payer Personal details</string>
    <string name="enterYourName">Enter Tax Payer Name</string>
    <string name="enterYourDateOfBirth">Enter Tax Payer Date of Birth</string>
    <string name="enterAddress">Enter Tax Payer Full Address</string>
    <string-array name="selectState">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="enterYourCityTown">Enter Tax Payer Your City/Town</string>
    <string name="enterPinCode">Enter Tax Payer  PinCode Number</string>
    <string name="enterPanCard">Enter Tax Payer PanCard Number</string>
    <string name="enterAadhaarCard">Enter Tax Payer  Aadhaar Card Number</string>
    <string name="taxTypesInfo">Tax Types Info :-</string>
    <string-array name="selectFinancialYear">
        <item>2019-2020</item>
        <item>2020-2021</item>
    </string-array>
    <string-array name="selectHouseType">
        <item>Rent</item>
        <item>Self(Own)</item>
    </string-array>
    <string name="onePropertyDetails">Property Details</string>
    <string name="oneOrMorePropertyDetails">One or More Property Details</string>
    <string name="interestOnProperty">Interest on Property or Rent Paid</string>
    <string name="interestHBL">Interest on H.B.L</string>
    <string name="incomeFromSBInterest">Income from O/S SB interest</string>
    <string name="dividend">Dividend</string>
    <string name="taxDeduction">Tax Deduction</string>
    <string name="bankDetails">Bank Details</string>
    <string name="selectBankName">Select Bank Name</string>
    <string name="accountHolderName">Account Holder Name</string>
    <string name="enterIFSCCode">Enter IFSC code</string>
    <string name="accountHolderNumber">Account Number</string>
    <string name="confirmAccountHolderNumber">Confirm Account Number</string>
    <string name="from16">From-16</string>
    <string name="userName">Tax Payer Name : </string>
    <string name="userDOB">Tax Payer Date of Birth : </string>
    <string name="type">Tax Type : </string>
    <string name="financialYear">Financial Year : </string>
    <string name="category">Category : </string>
    <string name="transactionId">Transaction ID : </string>
    <string name="income">Income : </string>
    <string name="houseType">House Type : </string>
    <string name="propertyDetails">Property Details : </string>
    <string name="interestProperty">Interest Property : </string>
    <string name="dividendView">Dividend : </string>
    <string name="TaxDeduction">80G - Tax Deduction : </string>
    <string name="bankName">Bank Name : </string>
    <string name="holderName">Account Holder Name </string>
    <string name="IFSCCode">Bank IFSC Code : </string>
    <string name="accNumber">Account Number : </string>
    <string name="submitDate">Submit Date : </string>
    <string name="address">Tax Payer Address : </string>
    <string name="cityTown">Tax Payer City / Town : </string>
    <string name="pinCodeNumber">Tax Payer PinCode Number : </string>
    <string name="panCard">Tax Payer PanCard Number : </string>
    <string name="aadhaarCardNumber">Tax Payer AadhaarCard Number : </string>
    <string name="slider1">ITR-1 Submit Date is coming to end. Please contact us for any questions.</string>
    <string name="slider2">ITR-2 Submit Date is coming to end. Please contact us for any questions.</string>
    <string name="slider3">We do accept Online Payment. Please pay us online.</string>
    <string name="home_fragment">Home</string>
    <string name="status_fragment">Status</string>
    <string name="profile_fragment">Profile</string>
    <string name="alertMsgITR1">ITR-1 will be filed based upon details provided by you. If we find any discrepancies we will notify you. You have to Scan and send Form-16 in the next Page. Thanks.</string>
    <string name="alertMsgITR2">ITR-2 will be filed based upon details provided by you. If we find any discrepancies we will notify you. You have to Scan and send Form-16 in the next Page.. Thanks.</string>
    <string name="alertMsgPayment">Have you scanned and Uploaded all pages of Form-16 ? If Yes, please proceed for Payment.</string>
    <string name="paymentDescription">After Scanning of all pages of Form-16, click on Payment button to complete the Payment. Return will be processed only after receiving the Payment.</string>
    <string name="conformPayment1">Thanks for providing all the details. Your Acknowledgement No. is</string>
    <string name="conformPayment2"> which you will referred for future correspondence. If we find inconsistencies or incomplete information, we will notify you in the APP.</string>
    <string name="uploadPdf">If You have more pdf to upload then click on the pdf button or click the payment button to continue</string>
    <string name="uploadPicture">If You have more pages to scan then click on the camera button or click the payment button to continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>