<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Activity.VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otpVerification"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/liteBlack"
            android:text="@string/enterTheOtpSend"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:digits="@string/number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:digits="@string/number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:digits="@string/number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:digits="@string/number"
                android:inputType="number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:digits="@string/number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:digits="@string/number"
                android:fontFamily="@font/roboto_condensed_regular"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/textResendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didNotReceiveOtp"
                android:textColor="@color/liteBlack"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginLeft="2dp"
                android:text="@string/resendOtp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/red"
                android:textSize="15sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_margin="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/verify"
            android:fontFamily="@font/roboto_bold"
            android:onClick="verifyBt"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>